--- a/src/MSetExplorer/Themes/Generic.xaml
+++ b/src/MSetExplorer/Themes/Generic.xaml
@@ -7,7 +7,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:PanAndZoomControl}">
-                    <Border BorderThickness="2" BorderBrush="DarkTurquoise">
+                    <Border BorderThickness="0" BorderBrush="DarkTurquoise">
 
                         <ContentPresenter x:Name="PART_Content" HorizontalAlignment="Center" VerticalAlignment="Center" />
 
@@ -21,68 +21,26 @@
             </Setter.Value>
         </Setter>
     </Style>    
-    
 
-    <!--<Style TargetType="{x:Type local:BitmapGridControl3}">
+    <Style TargetType="{x:Type local:BitmapGridControl}">
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type local:BitmapGridControl3}">
-                    <Border BorderThickness="1" BorderBrush="DarkSlateBlue">
+                <ControlTemplate TargetType="{x:Type local:BitmapGridControl}">
+                    <Border BorderThickness="0" BorderBrush="DarkSlateBlue">
 
                         <ContentPresenter x:Name="PART_Content" HorizontalAlignment="Center" VerticalAlignment="Center">
                             <ContentPresenter.Content>
                                 <Canvas x:Name="MainCanvas" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="Transparent">
-                                    <Image x:Name="bmgcImage" />
+                                    <Image x:Name="MainImage" />
                                 </Canvas>
-
                             </ContentPresenter.Content>
+
                         </ContentPresenter>
-
-                    </Border>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>-->
-
-
-
-    <Style TargetType="{x:Type local:BitmapGridControl3}">
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type local:BitmapGridControl3}">
-                    <Border BorderThickness="1" BorderBrush="DarkSlateBlue">
-
-                        <ContentPresenter x:Name="PART_Content" HorizontalAlignment="Center" VerticalAlignment="Center" />
 
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>    
-    
-    
-    <!--<Style TargetType="{x:Type local:BitmapGridControl}">
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type local:BitmapGridControl}">
-                    <Border BorderThickness="1" BorderBrush="ForestGreen">
-
-                        <ContentPresenter x:Name="BitmapGridControl_Content">
-                            <ContentPresenter.Content>
-                                <Canvas x:Name="bmgcCanvas" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="Transparent">
-                                    <Image x:Name="bmgcImage" />
-                                </Canvas>
-
-                            </ContentPresenter.Content>
-                        </ContentPresenter>
-
-                    </Border>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>-->
-
-
-
 
 </ResourceDictionary>
