Added logic to show / hide the Vertical ScrollBar

--- a/src/MSetExplorer/MapDisplay/Controls/MapSectionPzControl.xaml
+++ b/src/MSetExplorer/MapDisplay/Controls/MapSectionPzControl.xaml
@@ -13,7 +13,7 @@
             <ScrollViewer
                 x:Name="ScrollViewer1"
                 CanContentScroll="True"
-                VerticalScrollBarVisibility="Visible"
+                VerticalScrollBarVisibility="Disabled"
                 HorizontalScrollBarVisibility="Visible"
                 >
 
