Updated the MapSectionDisplayControl class by creating a new method: LoadNewView. This method is used instead of HandleDisplaySizeUpdate to support 'bounded mode.' Also replaced the ViewportSize property's setter with a new method: UpdateViewportSize to parallel the method: UpdateViewportSizeAndPos.

--- a/src/MSetExplorer/MapDisplay/Controls/MapSectionPzControl.xaml
+++ b/src/MSetExplorer/MapDisplay/Controls/MapSectionPzControl.xaml
@@ -26,8 +26,8 @@
 
                     <local:BitmapGridControl
                         x:Name="BitmapGridControl1"
-                        BitmapGridImageSource="{Binding ImageSource}"
-                        ImageOffset="{Binding ImageOffset}"
+                        BitmapGridImageSource="{Binding ImageSource, Mode=OneWay}"
+                        ImageOffset="{Binding ImageOffset, Mode=OneWay}"
                     />
 
                 </local:PanAndZoomControl>
