--- a/src/MSetExplorer/CreateImage/CreateImageDialog.xaml
+++ b/src/MSetExplorer/CreateImage/CreateImageDialog.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MSetExplorer"
-        mc:Ignorable="d"
+        mc:Ignorable="d" d:DataContext="{d:DesignInstance Type=local:CreateImageViewModel}"
         Title="Create Image" Height="165" Width="550">
     <Grid>
 
