The PosterDesigner is now saving and restoring the Display Position and Display Zoom values.

--- a/src/MSetExplorer/MapDisplay/Controls/MapSectionPzControl.xaml
+++ b/src/MSetExplorer/MapDisplay/Controls/MapSectionPzControl.xaml
@@ -14,7 +14,7 @@
                 x:Name="ScrollViewer1"
                 CanContentScroll="True"
                 VerticalScrollBarVisibility="Hidden"
-                HorizontalScrollBarVisibility="Visible"
+                HorizontalScrollBarVisibility="Auto"
                 >
 
                 <local:PanAndZoomControl
