Created method: GetScaledMapAreaInfoV1 on class: BoundedMapArea. Also refactored the MapJobHelper and associated classes to use SizeDbl instead of SizeInt for the PosterSize, DisplaySize, etc.

--- a/src/MSetExplorer/PosterOpenSaveDialog/PosterOpenSaveWindow.xaml
+++ b/src/MSetExplorer/PosterOpenSaveDialog/PosterOpenSaveWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MSetExplorer"
         mc:Ignorable="d"
-        Title="Open Poster" Height="1000" Width="820">
+        Title="Open Poster" Height="1000" Width="855">
     <Grid>
 
         <Grid.RowDefinitions>
@@ -20,7 +20,8 @@
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="Name" Width="250" DisplayMemberBinding="{Binding Name}" />
-                        <GridViewColumn Header="Size" Width="180" DisplayMemberBinding="{Binding Size}" />
+                        <GridViewColumn Header="Size" Width="110" DisplayMemberBinding="{Binding Size}" />
+                        <GridViewColumn Header="Bytes" Width="100" DisplayMemberBinding="{Binding Bytes, StringFormat=n0}" />
                         <GridViewColumn Header="Created" Width="160" DisplayMemberBinding="{Binding DateCreatedUtc}" />
                         <GridViewColumn Header="Updated" Width="190" DisplayMemberBinding="{Binding LastSavedUtc}" />
                     </GridView>
@@ -35,7 +36,6 @@
                 <StackPanel Orientation="Horizontal" Margin="0,5,0,5">
                     <TextBlock Width="90" Margin="10, 0, 20, 0" FontSize="16" Text="Name:" VerticalAlignment="Top"/>
                     <TextBox x:Name="txtName" Text="{Binding SelectedName}"  Width="170" Height="22"/>
-                    <Button Margin="15,0,0,0" Click="ButtonPreview_Click" >Preview</Button>
                 </StackPanel>
 
                 <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
