--- a/src/MSetExplorer/PosterOpenSaveDialog/PosterOpenSaveWindow.xaml
+++ b/src/MSetExplorer/PosterOpenSaveDialog/PosterOpenSaveWindow.xaml
@@ -51,7 +51,10 @@
             <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
                 <Button Name="btnSave" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="10" Click="SaveButton_Click" IsDefault="True" >Save</Button>
                 <Button Name="btnClose" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="10" Click="CloseButton_Click" IsCancel="True">_Cancel</Button>
-                <Button Name="btnDelete" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="30,10, 10, 10" Click="DeleteButton_Click">_Delete</Button>
+                <Button Name="btnDelete" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="40,10, 10, 10" Click="DeleteButton_Click">_Delete</Button>
+
+                <Button Name="btnTrimMapSections" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="10" Click="TrimMapSectionsButton_Click">_Trim</Button>
+                <!--<Button Name="btnTrimMapSectionsHeavy" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="10" Click="TrimMapSectionsHeavyButton_Click">Trim _Heavy</Button>-->
             </StackPanel>
 
         </Border>
