--- a/src/MSetExplorer/ProjectOpenSaveDialog/ProjectOpenSaveWindow.xaml
+++ b/src/MSetExplorer/ProjectOpenSaveDialog/ProjectOpenSaveWindow.xaml
@@ -3,9 +3,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MSetExplorer"
+        xmlns:local="clr-namespace:MSetExplorer" d:DataContext="{d:DesignInstance Type=local:ProjectOpenSaveViewModel}"
         mc:Ignorable="d"
-        Title="Open Project" Height="1000" Width="820">
+        Title="Open Project" Height="1000" Width="920">
     
     <Grid>
         
@@ -23,6 +23,7 @@
                         <GridViewColumn Header="Name" Width="250" DisplayMemberBinding="{Binding Name}" />
                         <GridViewColumn Header="Created" Width="160" DisplayMemberBinding="{Binding DateCreated}" />
                         <GridViewColumn Header="Job Count" Width="80" DisplayMemberBinding="{Binding NumberOfJobs}" />
+                        <GridViewColumn Header="Bytes" Width="100" DisplayMemberBinding="{Binding Bytes, StringFormat=n0}" />
                         <GridViewColumn Header="Zoom" Width="70" DisplayMemberBinding="{Binding MinMapCoordsExponent}" />
                         <GridViewColumn Header="Updated" Width="190" DisplayMemberBinding="{Binding LastSaved}" />
                     </GridView>
