--- a/src/MSetExplorer/JobDetailsDialog/JobDetailsWindow.xaml
+++ b/src/MSetExplorer/JobDetailsDialog/JobDetailsWindow.xaml
@@ -24,7 +24,7 @@
                         <!--<GridViewColumn Header="Bytes" Width="100" DisplayMemberBinding="{Binding Bytes, StringFormat=n0}" />-->
                         <GridViewColumn Header="Created" Width="160" DisplayMemberBinding="{Binding DateCreatedUtc}" />
                         <GridViewColumn Header="Sub" Width="190" DisplayMemberBinding="{Binding SubdivisionId}" />
-                        <GridViewColumn Header="Exp" Width="190" DisplayMemberBinding="{Binding MapCoordinateExponent}" />
+                        <GridViewColumn Header="Exp" Width="190" DisplayMemberBinding="{Binding MapCoordExponent}" />
                     </GridView>
                 </ListView.View>
             </ListView>
